--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </button>
             </div>
             <div class="col-9 d-flex justify-content-end">
-                <a href="https://github.com/hor-5/ReactProject" target="_blank" class="btn btn-dark rounded-circle p-0 m-0">
+                <a href="https://github.com/hor-5/Js-html-css" target="_blank" class="btn btn-dark rounded-circle p-0 m-0">
                     <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_BbKXYp.json" background="transparent"  speed="1"  style="width: 40px; height: 40px;"  loop autoplay></lottie-player>
                 </a>
             </div>
